find and post job done

--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -40,7 +40,7 @@
             <div class="col-lg-4 col-sm-6 col-md-4">
                 <div class="footer-widget footer-text">
                     <h4>Our location</h4>
-                    <p class="mail"><span>Mail:</span> promdise@gmail.com</p>
+                    <p class="mail"><span>Mail:</span> codex@gmail.com</p>
                     <p><span>Phone :</span>+202-277-3894</p>
                     <p><span>Location:</span> 455 West Orchard Street Kings Mountain, NC 28086,NOC building</p>
 
