--- a/src/app/homepage/homepage.component.scss
+++ b/src/app/homepage/homepage.component.scss
@@ -16,6 +16,9 @@
     .banner-area .content-padding {
         padding: 50px 0px 50px;
     }
+    .banner-btns{
+        text-align: center;
+    }
     .banner-img{
         width: 75%;
         margin-top: 10vh;
