--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -23,7 +23,7 @@
 
         <div class="collapse navbar-collapse justify-content-end" id="mainNav">
             <ul class="navbar-nav ">
-               <li class="nav-item dropdown">
+               <!-- <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" href="#" id="navbarWelcome" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                         Home
                     </a>
@@ -38,27 +38,36 @@
                             Onepage
                         </a>
                     </div>
-                </li>
-                <!-- <li class="nav-item">
-                    <a class="nav-link smoth-scroll" href="about.html">About</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link smoth-scroll" href="service.html">Service</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link smoth-scroll" href="pricing.html">Pricing</a>
-                </li> -->
-                <li class="nav-item">
-                    <a class="nav-link smoth-scroll" href="blog.html">Blog</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link smoth-scroll" [routerLink]="['/login']">Login/SignUp</a>
-                </li>
-                <!-- <li class="nav-item">
-                    <a class="nav-link smoth-scroll" href="blog.html">Signup</a>
                 </li> -->
                 <!-- <li class="nav-item">
-                    <a class="nav-link smoth-scroll" href="contact.html">Contact</a>
+                    <a class="nav-link" href="about.html">About</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="service.html">Service</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="pricing.html">Pricing</a>
+                </li> -->
+                <li class="nav-item">
+                    <a class="nav-link" [routerLink]="['/']">Home</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" [routerLink]="['/find-job']">Find Job</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" [routerLink]="['/post-job']">Post New Job</a>
+                </li>
+                <!-- <li class="nav-item">
+                    <a class="nav-link" href="blog.html">Blog</a>
+                </li> -->
+                <li class="nav-item">
+                    <a class="nav-link"  data-toggle="modal" data-target="#roleModal">Get Started</a>
+                </li>
+                <!-- <li class="nav-item">
+                    <a class="nav-link" href="blog.html">Signup</a>
+                </li> -->
+                <!-- <li class="nav-item">
+                    <a class="nav-link" href="contact.html">Contact</a>
                 </li> -->
             </ul>
         </div>
@@ -69,3 +78,52 @@
         <i class="fa fa-search"></i>
 </div>
 </nav>
+
+
+
+<!-- THE MODALS -->
+
+<!--role modals-->
+<div class="modal" id="roleModal">
+    <div class="modal-dialog">
+      <div class="modal-content">
+  
+       
+        <div class="modal-header">
+          <button type="button" class="close" data-dismiss="modal">&times;</button>
+        </div>
+  
+       
+        <div class="modal-body">
+          <div class="form-segment">
+                <h4 class="text-center">
+                    Select your role on the platform
+                </h4>
+            </div>
+            <div class="container">
+                <div class="row">
+                    <div class="col-6 text-center" >
+                        <div class="role-icon">
+                            <img src="assets/img/icon/freelancer.svg" alt="">
+                        </div>
+                        <a [routerLink]="['/welcome/','freelancer','signup']" class="btn btn-hero" data-dismiss="modal">Freelancer</a>
+                    </div>
+                    <div class="col-6 text-center">
+                        <div class="role-icon">
+                            <img src="assets/img/icon/employer.svg" alt="">
+                        </div>
+                        <a [routerLink]="['/welcome/','employer','signup']" class="btn btn-hero" data-dismiss="modal">Employer</a>
+                    </div>
+                </div>
+            </div>
+           
+        </div>
+  
+       
+         <div class="modal-footer">
+          <!-- <button type="button" class="btn btn-danger" data-dismiss="modal">Close</button> -->
+        </div> 
+  
+      </div>
+    </div>
+  </div>
