--- a/src/app/homepage/homepage.component.html
+++ b/src/app/homepage/homepage.component.html
@@ -6,15 +6,15 @@
                 <div class="row align-items-center">
                     <div class="col-lg-7 col-sm-12 col-md-12 order-lg-first">
                         <div class="banner-content content-padding">
-                           
-                            <h1 class="banner-title gradient-text">We using blockchain as payment method and secured for all employer and freelancer.</h1>
+
+                            <h1 class="banner-title gradient-text">We are using blockchain as a secure payment method for all employers and freelancers.</h1>
 
 <!-- <p>It is fast and more valuable good time for search job.</p> -->
-                            <div class="text-center">
-                                <a href="#" class="btn btn-white btn-circled mr-3">post a job</a>
-                                <a href="#" class="btn btn-white btn-circled">find a job</a>
+                            <div class="banner-btns">
+                                <a [routerLink]="['/post-job']" class="btn btn-white btn-circled mr-3">post a job</a>
+                                <a [routerLink]="['/find-job']" class="btn btn-white btn-circled">find a job</a>
                             </div>
-                            
+
                         </div>
                     </div>
                     <div class="col-lg-5 order-first">
@@ -32,7 +32,7 @@
         <div class="row">
             <div class="col-lg-12 col-sm-12 m-auto">
                 <div class="section-heading text-white">
-                    <h4 class="section-title">It is fast and more valuable good time for search job.</h4>
+                    <h4 class="section-title">Smart contracts enable safe and quick payments on our platform.</h4>
                     <!-- <p>We’re full service which means we’ve got you covered on design & content right through to digital. You’ll form a lasting relationship with us.</p> -->
                 </div>
             </div>
@@ -50,7 +50,7 @@
                         <img src="assets/img/icon/contact.svg" alt="service-icon" class="img-fluid">
                     </div>
                     <div class="service-inner">
-                        <h4>Smart Contact</h4>
+                        <h4>Smart Contracts</h4>
                         <!-- <p>Reach a huge area of users and get a publicty of your product and service ,<span>video marketing</span> solution.</p> -->
                     </div>
                 </div>
@@ -61,8 +61,8 @@
                         <img src="assets/img/icon/transfer.svg" alt="service-icon" class="img-fluid">
                     </div>
                     <div class="service-inner">
-                        <h4>Safe Transfer</h4>
-                        
+                        <h4>Safe Transfers</h4>
+
                     </div>
                 </div>
             </div>
@@ -72,13 +72,13 @@
                         <img src="assets/img/icon/token.svg" alt="service-icon" class="img-fluid">
                     </div>
                     <div class="service-inner">
-                        <h4>Mini Token</h4>
-                       
+                        <h4>Utility Tokens</h4>
+
                     </div>
                 </div>
             </div>
 
-  
+
         </div>
     </div>
 </section>
@@ -94,10 +94,60 @@
                 </div>
             </div>
         </div>
-        
+
         <div class="row">
             <div class="col-lg-8 m-auto col-sm-12 col-md-12">
-                <div class="carousel slide" id="test-carousel2">
+                <owl-carousel
+                [options]="singleCarousel"
+                [carouselClasses]="['owl-theme', 'row', 'sliding']"
+              >
+              <div class="item">
+                <div class="testimonial-content style-2">
+                    <div class="author-info ">
+                        <div class="author-img">
+                            <img src="assets/img/author/3b.jpg" alt="" class="img-fluid">
+                        </div>
+                    </div>
+
+                    <p><i class="icofont icofont-quote-left"></i>They is a great platform to anyone like who want to start buisiness but not get right decision. It’s really great placefor new to start the buisness in righ way! <i class="icofont icofont-quote-right"></i></p>
+                    <div class="author-text">
+                        <h5>Marine Joshi</h5>
+                        <p>Senior designer</p>
+                    </div>
+                </div>
+              </div>
+              <div class="item">
+                <div class="testimonial-content style-2">
+                    <div class="author-info ">
+                        <div class="author-img">
+                            <img src="assets/img/author/5b.jpg" alt="" class="img-fluid">
+                        </div>
+                    </div>
+
+                    <p><i class="icofont icofont-quote-left"></i>They is a great platform to anyone like who want to start buisiness but not get right decision. It’s really great placefor new to start the buisness in righ way! <i class="icofont icofont-quote-right"></i></p>
+                    <div class="author-text">
+                        <h5>Marine Joshi</h5>
+                        <p>Senior designer</p>
+                    </div>
+                </div>
+              </div>
+              <div class="item">
+                <div class="testimonial-content style-2">
+                    <div class="author-info ">
+                        <div class="author-img">
+                            <img src="assets/img/author/3b.jpg" alt="" class="img-fluid">
+                        </div>
+                    </div>
+
+                    <p><i class="icofont icofont-quote-left"></i>They is a great platform to anyone like who want to start buisiness but not get right decision. It’s really great placefor new to start the buisness in righ way!<i class="icofont icofont-quote-right"></i></p>
+                    <div class="author-text">
+                        <h5>Marine Joshi</h5>
+                        <p>Senior designer</p>
+                    </div>
+                </div>
+              </div>
+              </owl-carousel>
+                <!-- <div class="carousel slide" id="test-carousel2">
                     <div class="carousel-inner">
                         <ol class="carousel-indicators">
                             <li data-target="#test-carousel2" data-slide-to="0" class="active"></li>
@@ -143,7 +193,7 @@
                                 </div>
                             </div>
                         </div>
-                        <!--  ITEM END  -->
+
 
                         <div class="carousel-item ">
                             <div class="row">
@@ -164,9 +214,9 @@
                                 </div>
                             </div>
                         </div>
-                        <!--  ITEM END  -->
+
                     </div>
-                </div>
+                </div> -->
             </div>
         </div>
     </div>
@@ -184,31 +234,31 @@
 
             <div class="col-lg-6 pl-4">
                <div class="mb-5">
-                    
+
                 </div>
 
                 <ul class="about-list">
-                    <li> <h5 class="mb-2"><i class="icofont icofont-check-circled"></i>Strategy 1</h5>
+                    <li> <h4 class="mb-2"><i class="icofont icofont-check-circled"></i>Strategy 1</h4>
                         <p>
                             Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad quae officiis, fugit sed fuga veritatis! Ex iste soluta quibusdam possimus.
                         </p>
                     </li>
 
                     <li>
-                        <h5 class="mb-2"><i class="icofont icofont-check-circled"> </i> Strategy 2</h5>
+                        <h4 class="mb-2"><i class="icofont icofont-check-circled"> </i> Strategy 2</h4>
                         <p>
                             Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad quae officiis, fugit sed fuga veritatis! Ex iste soluta quibusdam possimus.
                         </p>
                     </li>
 
                     <li>
-                        <h5 class="mb-2"><i class="icofont icofont-check-circled"> </i>Strategy 3</h5>
+                        <h4 class="mb-2"><i class="icofont icofont-check-circled"> </i>Strategy 3</h4>
                         <p>
                             Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad quae officiis, fugit sed fuga veritatis! Ex iste soluta quibusdam possimus.
                         </p>
                     </li>
                     <li>
-                        <h5 class="mb-2"> <i class="icofont icofont-check-circled"> </i>Strategy 4</h5>
+                        <h4 class="mb-2"> <i class="icofont icofont-check-circled"> </i>Strategy 4</h4>
                         <p>
                             Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad quae officiis, fugit sed fuga veritatis! Ex iste soluta quibusdam possimus.
                         </p>
@@ -220,7 +270,7 @@
 </section>
 <!--  SERVICE AREA END  -->
 <!--  SECTION TEAM  -->
-<section class="section-padding bg-gray team-section" >
+<!-- <section class="section-padding bg-gray team-section" >
     <div class="container">
         <div class="row">
             <div class="col-lg-12">
@@ -243,7 +293,7 @@
                 </ul>
                 <h4 class="mt-3">Michale John</h4>
                 <p>Senior Manager</p>
-                
+
             </div>
             <div class="col-lg-3 col-md-6">
                 <img src="assets/img/team/team-2.jpg" alt="" class="img-fluid rounded w-100 team-img">
@@ -286,5 +336,6 @@
             </div>
         </div>
     </div>
-</section>
-<!--  SECTION TEAM END  --> 
+</section> -->
+<!--  SECTION TEAM END  -->
+
