--- a/src/app/login-signup/login-signup.component.html
+++ b/src/app/login-signup/login-signup.component.html
@@ -1,18 +1,20 @@
+
 <div class="wrapper">
     <div class="container">
+      
         <section id="formHolder">
      
            <div class="row">
      
               <!-- Brand Box -->
-              <div class="col-sm-6 brand">
+              <div class="col-lg-6 brand">
                  <a routerLink="/" class="logo">
                      <img src="assets/img/logo.PNG" alt="" />
                  </a>
      
                  <div class="heading">
-                    <h2>codex</h2>
-                    <p>Your Right Choice</p>
+                    <h2>Codex on Althash</h2>
+                    <p>Leading Software Innovation</p>
                     <img src="assets/img/login-img.svg" alt="login image" class="login-img">
                  </div>
      
@@ -24,14 +26,17 @@
      
      
               <!-- Form Box -->
-              <div class="col-sm-6 form">
+              <div class="col-lg-6 form">
      
                  <!-- Login Form -->
-                 <div class="login form-peice switched">
+                 <div class="login form-peice login-piece switched">
                      <div class="form-head">
-                         <h1 class="gradient-text">
-                             Login
-                         </h1>
+                        <h2 class="gradient-text" *ngIf="isFreelancer">
+                           Freelancer Login
+                       </h2>
+                       <h2 class="gradient-text" *ngIf="!isFreelancer">
+                          Employer Login
+                      </h2>
                      </div>
                     <form class="login-form" action="#" method="post">
                        <div class="form-group">
@@ -46,18 +51,21 @@
      
                        <div class="CTA">
                           <input type="submit" value="Login">
-                          <a href="#" class="switch">I'm new here</a>
+                          <a (click)="showSignup()" class="switch">I'm new here</a>
                        </div>
                     </form>
                  </div><!-- End Login Form -->
      
      
                  <!-- Signup Form -->
-                 <div class="signup form-peice">
+                 <div class="signup form-peice signup-piece switched">
                     <div class="form-head">
-                        <h1 class="gradient-text">
-                            Sign Up
-                        </h1>
+                        <h2 class="gradient-text" *ngIf="isFreelancer">
+                            Freelancer SignUp
+                        </h2>
+                        <h2 class="gradient-text" *ngIf="!isFreelancer">
+                           Employer SignUp
+                       </h2>
                     </div>
                     <form class="signup-form" action="#" method="post">
      
@@ -92,7 +100,7 @@
      
                        <div class="CTA">
                           <input type="submit" value="Signup Now" id="submit">
-                          <a href="#" class="switch">I already have an account</a>
+                          <a (click)="showLogin()" class="switch">I already have an account</a>
                        </div>
                     </form>
                  </div><!-- End Signup Form -->
