--- a/src/styles.scss
+++ b/src/styles.scss
@@ -19,6 +19,8 @@
 * 01.GLOBAL STYLE
 * ----------------------------------------------------------------------------------------
 */
+
+@import './app/common/styles/modal-styles.scss';
 body {
   font-size: 16px;
   font-weight: 500;
@@ -115,6 +117,10 @@ h6 {
   line-height: 26px;
 }
 
+.custom-shadow{
+  box-shadow: 0 1px 3px 0 rgba(0, 0, 0, 0.1), 0 1px 2px 0 rgba(0, 0, 0, 0.06);
+}
+
 .f-color {
   color: #635CDB;
 }
@@ -173,7 +179,9 @@ h5.subtitle {
   height: 1px;
   margin: 10px auto;
 }
-
+button{
+  outline: none !important;
+}
 /*---------- BUTTONS ----------*/
 .btn {
   font: 600 10.5px/1;
@@ -322,7 +330,7 @@ h5.subtitle {
   left: 0px;
   width: 100%;
   height: 100%;
-  background: rgba(0, 0, 0, 0.5);
+  background: #3a3282ba;
 }
 
 .brown-overlay {
@@ -338,6 +346,14 @@ h5.subtitle {
 .gr-overlay {
   background: linear-gradient(135deg, #2f1ce0 0%, #53a0fd 30%, #51eca5 100%);
   opacity: .87;
+}
+
+.role-icon{
+  margin: 2rem 0 1rem;
+  text-align: center;
+  img{
+    width: 50%;
+  }
 }
 
 /* ========================
@@ -440,7 +456,7 @@ INner Pages
 }
 
 .page-banner-area {
-  background: url("assets/img/banner/1.jpg") no-repeat 50% 50%;
+  background:linear-gradient(135deg, #301ce0bb 0%, #539ffdc9 30%,rgba(81, 236, 166, 0.808) 100%), url("assets/img/banner/1.jpg") no-repeat 50% 50%;
   background-size: cover;
 }
 
@@ -870,9 +886,10 @@ PRICING PAGE
   TESTIMONIAL AREA SECTION
 ---------------------------------*/
 .author-img img {
-  width: 100px;
+  width: 100px !important;
   padding: 2px;
   height: 100px;
+  margin: auto;
   border-radius: 100%;
   border: 1.5px solid #4b4b4b;
 }
@@ -953,9 +970,17 @@ input[type=text], input[type=email] {
   height: 50px;
 }
 
+.form-group{
+  margin-top: 1rem;
+}
+
 .form-control {
   border: 1px solid #eee;
   padding-left: 20px;
+}
+
+textarea{
+  min-height: 150px;
 }
 
 .form-control:hover,
@@ -970,8 +995,9 @@ input[type=text], input[type=email] {
 .form-control::-webkit-input-placeholder {
   color: #888;
   opacity: .9;
-  font-size: 13px;
-  padding-left: 10px;
+  font-size: 1rem;
+  font-weight: 500;
+  padding-left: 0px;
 }
 
 .form-control::-moz-placeholder {
@@ -1069,9 +1095,6 @@ BLOG PAGE
   font-size: 14px;
 }
 
-.sidebar-widget {
-  padding-left: 20px;
-}
 
 .category ul li {
   margin-bottom: 10px;
@@ -1092,14 +1115,7 @@ BLOG PAGE
   font-weight: 900;
 }
 
-.tag a {
-  text-transform: capitalize;
-  padding: 5px 8px;
-  border: 1px solid #eee;
-  margin-bottom: 5px;
-  font-size: 14px;
-  display: inline-block;
-}
+
 
 .search i {
   position: absolute;
@@ -1203,6 +1219,7 @@ BLOG SINGLE
   letter-spacing: 1px;
   padding-top: 30px;
   margin-top: 30px;
+  color: #fff;
   border-top: 1px solid #eee;
 }
 
@@ -1450,6 +1467,9 @@ BLOG SINGLE
   /*----------------------
      SECTION HEAINDG
     -----------------------*/
+    .section{
+      padding: 30px 0;
+    }
     .section-padding {
       padding:30px 0px;
   }
@@ -1474,9 +1494,12 @@ BLOG SINGLE
   .banner-content .banner-title {
     line-height: 37px;
   }
-  .banner-content p {
-    font-size: 16px;
-  }
+  .banner-content {
+    padding-right: 0;
+    p {
+      font-size: 16px;
+    }
+  } 
   /*----------------
      INTRO
     ----------------*/
@@ -1489,7 +1512,7 @@ BLOG SINGLE
   .about-list li {
     float: none;
     width: 100%;
-    margin-bottom: 10px;
+    margin-bottom: 1.5rem;
   }
   .about-bg-img {
     width: 35%;
@@ -1557,3 +1580,22 @@ BLOG SINGLE
 }
 
 /*# sourceMappingURL=maps/style.css.map */
+.option-overlay{
+  position: fixed;
+  background-color: rgba(0, 0, 0, 0.548);
+  height: 100vh;
+  width: 100%;
+  display: none;
+  z-index: 1069;
+  animation: fade_in 0.5s ease-in forwards;
+}
+
+@keyframes fade_in {
+  0%{
+    opacity: 0;
+  }
+  100%{
+    opacity: 1;
+  }
+  
+}
